# Plant-disease

./: .gitignore  README.md  pyproject.toml
configs/: baseline_resnet18_aligned_gpu.yaml  baseline_segformer_b0.yaml  baseline_segformer_b0_aligned_gpu.yaml  baseline_segformer_b0_gpu.yaml  concept_rule_resnet18_aligned_gpu.yaml  concept_rule_segformer_b0.yaml  concept_rule_segformer_b0_aligned_gpu.yaml  lesion_guided_segformer_b0.yaml  mixed_supervision_cls_only_pseudo_gpu.yaml  mixed_supervision_gpu.yaml  mixed_supervision_pseudo_weight_01_gpu.yaml  mixed_supervision_pseudo_weight_03_gpu.yaml  mixed_supervision_resnet18_aligned_gpu.yaml  mixed_supervision_resnet18_aligned_w01_gpu.yaml  mixed_supervision_resnet18_aligned_w03_gpu.yaml  mixed_supervision_segformer_b0_aligned_w03_gpu.yaml  plantvillage_classification_gpu.yaml  pseudo_label_segformer_b0.yaml
scripts/: audit_taxonomy.py  evaluate_mask_replacement.py  evaluate_model.py  generate_pseudo_masks.py  infer_mmseg.py  prepare_aligned_subset_manifests.py  prepare_mixed_manifest.py  prepare_mixed_manifest_cls_only_pseudo.py  prepare_mixed_manifest_weighted_pseudo.py  prepare_plantseg.py  prepare_plantvillage.py  prepare_segmentation_manifest.py  recompute_severity_labels.py  train_baseline.py  train_mmseg.py
tests/: test_builders.py  test_cam_pipeline.py  test_dataset.py  test_engine.py  test_eval_reporting.py  test_import_smoke.py  test_losses.py  test_manifest.py  test_metrics.py  test_mmseg_config.py  test_mmseg_replacement.py  test_model_shapes.py  test_plantseg_builder.py  test_rules.py  test_taxonomy_audit.py  (+1 more)
(+26 files in other folders)
